--- a/.github/workflows/order-service-deploy.yml
+++ b/.github/workflows/order-service-deploy.yml
@@ -47,6 +47,9 @@ jobs:
     needs: build
     
     steps:
+      - name: Checkout to the branch
+        uses: actions/checkout@v2
+        
       - name: Azure Login
         uses: azure/login@v1
         with:
