--- a/components/statestore.yaml
+++ b/components/statestore.yaml
@@ -1,8 +1,4 @@
-apiVersion: dapr.io/v1alpha1
-kind: Component
-metadata:
-  name: orderstore
-spec:
+- name: statestore
   type: state.redis
   version: v1
   metadata:
