--- a/.github/workflows/payment-gateway-service-deploy.yml
+++ b/.github/workflows/payment-gateway-service-deploy.yml
@@ -1,4 +1,4 @@
-name: Order Service
+name: Payment Gateway Service
 
 on:
   push:
@@ -7,11 +7,11 @@ on:
   workflow_dispatch:      
 
 env:
-  APP_PATH: src/OrderService
-  APP_NAME: order-service
+  APP_PATH: src/PaymentGatewayService
+  APP_NAME: payment-service
   RESOURCE_GROUP: DevOps-Playground
-  APP_PORT: 5280
-  DAPR_PORT: 3500
+  APP_PORT: 5094
+  DAPR_PORT: 3502
   COMPONENTS_PATH: components/statestore.yaml
 
 jobs:
