--- a/.github/workflows/contribution-service-deploy.yml
+++ b/.github/workflows/contribution-service-deploy.yml
@@ -72,7 +72,7 @@ jobs:
                 --registry-login-server daprimages.azurecr.io \
                 --registry-username  ${{ secrets.REGISTRY_USERNAME }} \
                 --registry-password ${{ secrets.REGISTRY_PASSWORD }} \
-                --target-port ${{env.DAPR_PORT}} \
+                --target-port ${{env.APP_PORT}} \
                 --ingress 'external' \
                 --min-replicas 1 \
                 --max-replicas 1 \
@@ -88,7 +88,7 @@ jobs:
                 --registry-login-server daprimages.azurecr.io \
                 --registry-username  ${{ secrets.REGISTRY_USERNAME }} \
                 --registry-password ${{ secrets.REGISTRY_PASSWORD }} \
-                --target-port ${{env.DAPR_PORT}} \
+                --target-port ${{env.APP_PORT}} \
                 --ingress 'external' \
                 --min-replicas 1 \
                 --max-replicas 1 \
