--- a/src/ContributionService/Dockerfile
+++ b/src/ContributionService/Dockerfile
@@ -1,10 +1,9 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+﻿FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
 ENV ASPNETCORE_URLS=http://+:5127
+ENV ASPNETCORE_ENVIRONMENT=Production
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0.101-bullseye-slim AS build
 WORKDIR /src
 COPY ["ContributionService.csproj", "./"]
 RUN dotnet restore "ContributionService.csproj"
