--- a/src/OrderService/Dockerfile
+++ b/src/OrderService/Dockerfile
@@ -1,7 +1,8 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim AS base
 WORKDIR /app
-ENV ASPNETCORE_URLS=http://+:5280
-ENV ASPNETCORE_ENVIRONMENT=Production
+EXPOSE 80
+EXPOSE 443
+ENV ASPNETCORE_ENVIRONMENT=Development
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0.101-bullseye-slim AS build
 WORKDIR /src
