--- a/src/PaymentGatewayService/Dockerfile
+++ b/src/PaymentGatewayService/Dockerfile
@@ -1,8 +1,8 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+﻿FROM mcr.microsoft.com/dotnet/aspnet:6.0-bullseye-slim AS base
 WORKDIR /app
 ENV ASPNETCORE_ENVIRONMENT=Development
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0.101-bullseye-slim AS build
 WORKDIR /src
 COPY ["PaymentGatewayService.csproj", "./"]
 RUN dotnet restore "PaymentGatewayService.csproj"
